--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!doctype html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Craftify Handmade Products Marketplace</title>
   </head>
+
   <body>
     <div id="root"></div>
+
+    <!-- Omnidimension Widget Script -->
+    <script
+      id="omnidimension-web-widget"
+      async
+      src="https://backend.omnidim.io/web_widget.js?secret_key=ba41d2c4c60b5592719d6ae992689eb9"
+    ></script>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
+
 </html>
