--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
     <div id="root"></div>
 
     <!-- Omnidimension Widget Script -->
-    <script
-      id="omnidimension-web-widget"
-      async
-      src="https://backend.omnidim.io/web_widget.js?secret_key=ba41d2c4c60b5592719d6ae992689eb9"
-    ></script>
+    <script id="omnidimension-web-widget" async src="https://backend.omnidim.io/web_widget.js?secret_key=7211adb0fbeca3f2fb4cfddabfbd1674" ></script>
 
     <script type="module" src="/src/main.tsx"></script>
   </body>
